# cpp-interview-prep

./: .gitignore  CMakeLists.txt  main.cpp
cpp_core/: primitive_types.cpp
